# ai-compliance-auditor-gui

./: README.md  main.py  pyproject.toml
.streamlit/: secrets.toml
config/: settings.py
pages/: chat.py  settings.py  upload.py
pipelines/: __init__.py  ingestion.py
services/: __init__.py  embeddings.py  vector_store.py
