[project]
name = "ai-compliance-auditor-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.54.0",
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.65",
    "langchain-ollama>=0.3.3",
    "mcp[cli]>=1.9.3",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
