[project]
name = "ai-compliance-auditor-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.54.0",
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-ollama>=0.3.3",
    "mcp[cli]>=1.9.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pypdf>=5.6.0",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
